--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="etiqueta_botao_lancar_dados">Lançar Dados</string>
     <string name="valor_dado_1">Valor Dado 1</string>
     <string name="valor_dado_2">Valor Dado 2</string>
+    <string name="register_input_name">Insira o seu nome</string>
+    <string name="play_button_label">Jogar</string>
 </resources>
